# escena

./: CMakeLists.txt
include/: GLFWapp.h  renderer.h  scene_node.h
include/utils/: shader.h
lib/: GLFWapp.cpp  scene_node.cc
lib/utils/: shader.cpp
samples/: sample01.cc  sample02.cc
samples/assets/: box.dae  simple.frag  simple.vert
